# msg_introspection_demo

./: CMakeLists.txt  README.md  package.xml
msg/: MyMessage.msg
src/: publisher.cpp  subscriber.cpp
