<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msg_introspection_demo</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="barry.xu@sony.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_typesupport_introspection_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_typesupport_introspection_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
